--- a/form-runner/jvm/src/main/assets/xbl/orbeon/open-select1/open-select1.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/open-select1/open-select1.less
@@ -37,6 +37,12 @@
         }
     }
 
+    .xforms-open-select1-appearance-full {
+        .xforms-items {
+            //padding: 4px 6px; // so that this matches the padding when we have `tabindex="0"`
+        }
+    }
+
     @media print {
         .xbl-fr-open-select1 {
             .fr-component-group {
